--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -1,6 +1,6 @@
 .login {
-    width: 100vh;
-    height: 100vh;
+    width: 80vw;
+    height: 80vh;
     background-color: #FCF6F5FF;
     display: flex;
     align-items: center;
@@ -16,6 +16,7 @@
 .login-left,.login-right {
     flex: 1;
     display: flex;
+    margin: 20px;
     flex-direction: column;
     justify-content: center;
 } 
@@ -33,6 +34,16 @@
 
 .login-right-box {
     height: 300px;
+    padding: 20px;
+    background-color: white;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.login-right-box-form {
+    height: 180px;
     padding: 20px;
     background-color: white;
     border-radius: 10px;
@@ -64,6 +75,15 @@
     cursor: pointer;
 }
 
+.login-right-box-login:focus,.login-right-box-register:focus {
+    outline: none;
+}
+
+.login-right-box-login:disabled,.login-right-box-register:disabled {
+    background-color: lightcoral;
+    cursor: not-allowed;
+}
+
 .login-right-box-reset {
     margin-top: 10px;
     text-align: center;
@@ -71,5 +91,5 @@
 }
 
 .login-right-box-register {
-    background-color: lightcoral;
+    background-color: #990011FF;
 }
