--- a/client/src/components/share/share.css
+++ b/client/src/components/share/share.css
@@ -1,6 +1,5 @@
 .share {
     width: 100%;
-    height: 170px;
     border-radius: 10px;
     
     -webkit-box-shadow: 0px 0px 13px 0px rgba(0,0,0,0.44); 
@@ -96,4 +95,21 @@
     background-color: #990011FF;
     color: #FCF6F5FF;
     transition: 0.5s;
+}
+
+.share-image-container {
+    padding: 0 20px 10px 20px;
+    position: relative;
+}
+.share-image {
+    width: 50%;
+    object-fit: cover;
+}
+
+.share-image-cancel {
+    position: absolute;
+    top: 0;
+    right: 20;
+    cursor: pointer;
+    opacity: 0.7;
 }
